--- a/Gingerbread/Views/BaseWindowStyle.xaml
+++ b/Gingerbread/Views/BaseWindowStyle.xaml
@@ -91,15 +91,15 @@
                         <!--Caption buttons-->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
                             <Button x:Name="MinimizeButton" Style="{StaticResource MinimizeButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True"/>
-                            <!-- Maximize/Minimize button disabled for now
-                            <Button x:Name="RestoreButton" Visibility="Collapsed" Style="{StaticResource RestoreButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True"/>
-                            <Button x:Name="MaximizeButton" Visibility="Visible" Style="{StaticResource MaximizeButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True"/>
-                            -->
+                            
+                            <!--<Button x:Name="RestoreButton" Visibility="Collapsed" Style="{StaticResource RestoreButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True"/>
+                            <Button x:Name="MaximizeButton" Visibility="Visible" Style="{StaticResource MaximizeButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True"/>-->
+                            
                             <Button x:Name="CloseButton" Style="{StaticResource CloseButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True"/>
                         </StackPanel>
                     </Grid>
 
-                    <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Background="#b36e36"/>
+                    <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Background="#b6572a"/>
                 </Grid>
             </Border>
             <Border DockPanel.Dock="Bottom" BorderBrush="gray" BorderThickness="1 0 1 1">
