× Point Alignment bug fix  + origin offset
× Fix some bugs in point alignment to make it more robust (still limited)
+ Origin offset settings in WPF dialog
+ Activate button apply and reset in WPF dialog

--- a/Gingerbread/Views/ViewExportXML.xaml
+++ b/Gingerbread/Views/ViewExportXML.xaml
@@ -27,7 +27,7 @@
         
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10 10 10 5">
             <StackPanel Orientation="Vertical">
-                <GroupBox Header="Header Info" Padding="5" Width="200" Height="250">
+                <GroupBox Header="Header Info" Padding="5" Width="200" Height="235">
                     <GroupBox.HeaderTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}" FontSize="12" Foreground="Gray" />
@@ -62,7 +62,7 @@
                     </Grid>
                 </GroupBox>
 
-                <GroupBox Header="Tolerance" Margin="0 5 0 0" Padding="5" Width="200" Height="150">
+                <GroupBox Header="Tolerance" Margin="0 5 0 0" Padding="5" Width="200" Height="110">
                     <GroupBox.HeaderTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}" FontSize="12" Foreground="Gray" />
@@ -76,37 +76,73 @@
                         </Grid.ColumnDefinitions>
 
                         <StackPanel Grid.Column="0" Margin="0 0 5 0">
-                            <TextBlock Text="Cluster" Margin="0 4 0 5"/>
-                            <TextBlock Text="Expansion" Margin="0 4 0 5"/>
+                            <TextBlock Text="tolGroup" Margin="0 4 0 5"/>
+                            <TextBlock Text="tolExpand" Margin="0 4 0 5"/>
+                            <TextBlock Text="tolDelta" Margin="0 4 0 5"/>
                         </StackPanel>
 
                         <StackPanel Grid.Column="1" Margin="5 0 0 0">
                             <TextBox Name="cluster" Padding="2" Text="{Binding Source={x:Static p:Settings.Default}, 
-            Path=groupTolerance, Mode=TwoWay}" Margin="0 2 0 2"/>
+            Path=tolGroup, Mode=TwoWay}" Margin="0 2 0 2"/>
                             <TextBox Name="expansion" Padding="2" Text="{Binding Source={x:Static p:Settings.Default}, 
-            Path=expandTolerance, Mode=TwoWay}" Margin="0 2 0 2"/>
+            Path=tolExpand, Mode=TwoWay}" Margin="0 2 0 2"/>
+                            <TextBox Name="threshold" Padding="2" Text="{Binding Source={x:Static p:Settings.Default}, 
+            Path=tolDelta, Mode=TwoWay}" Margin="0 2 0 2"/>
                         </StackPanel>
                     </Grid>
                 </GroupBox>
 
-                <Grid Margin="0 10 0 0">
+                <GroupBox Header="Origin" Margin="0 5 0 0" Padding="5" Width="200" Height="58">
+                    <GroupBox.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}" FontSize="12" Foreground="Gray" />
+                        </DataTemplate>
+                    </GroupBox.HeaderTemplate>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="7*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="7*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0" Margin="0">
+                            <TextBlock Text="X" Margin="0 4 0 5"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="1" Margin="5 0 5 0">
+                            <TextBox Name="Xcoord" Padding="2" Text="{Binding Source={x:Static p:Settings.Default}, 
+            Path=originX, Mode=TwoWay}" Margin="0 2 0 2"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="2" Margin="5 0 0 0">
+                            <TextBlock Text="Y" Margin="0 4 0 5"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="3" Margin="5 0 0 0">
+                            <TextBox Name="Ycoord" Padding="2" Text="{Binding Source={x:Static p:Settings.Default}, 
+            Path=originY, Mode=TwoWay}" Margin="0 2 0 2"/>
+                        </StackPanel>
+                    </Grid>
+                    
+                </GroupBox>
+
+                    <Grid Margin="0 10 0 0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="10"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Column="0">
-                        <Button Content="Apply" IsEnabled="False"/>
+                        <Button Content="Apply" Click="BtnApply" IsEnabled="True"/>
                     </StackPanel>
                     <StackPanel Grid.Column="2">
-                        <Button Content="Reset" IsEnabled="False"/>
+                        <Button Content="Reset" Click="BtnReset" IsEnabled="True"/>
                     </StackPanel>
                 </Grid>
 
             </StackPanel>
 
 
-            <GroupBox Header="Preview" Margin="5 0 0 0" Padding="3" Width="700">
+            <GroupBox Header="Preview" Margin="5 0 0 0" Padding="3" Width="600">
                     <GroupBox.HeaderTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}" FontSize="12" Foreground="Gray" />
