+ Curtain System Filter
+ Allocate the Curtain System to each level as part of the floorplan boundary. It is hard to get the intersection curve of CurtaSystem surface and the level plane, so a polyline based on intersections of GridLine and level plane is used.

--- a/Gingerbread/Views/ViewExportXML.xaml
+++ b/Gingerbread/Views/ViewExportXML.xaml
@@ -177,7 +177,7 @@ duplicate components among documents. All documents must share the same&#x0a;Car
                         </DataTemplate>
                     </GroupBox.HeaderTemplate>
                     <Grid Name="ViewPort">
-                        <wpf:ChromiumWebBrowser Address="{Binding Source={x:Static p:Settings.Default}, Path=SpiderPath, Mode=OneWay}"/>
+                        <wpf:ChromiumWebBrowser Address="{Binding Source={x:Static p:Settings.Default}, Path=spiderPath, Mode=OneWay}"/>
                     </Grid>
                 </GroupBox>
             </StackPanel>
